shorten handlers/models to handler/model
